--- a/views/layout.njk
+++ b/views/layout.njk
@@ -18,7 +18,7 @@
     <header>
         <div class="links">
             <!-- a links -->
-            <a href="/">Instructors</a>
+            <a href="/" class="active">Instructors</a>
             <a href="/portfolio">Members</a>
         </div>
     </header>
